# TI-S4-DEBUG

./: .gitignore  Assignment_start_with_the_real_one.md  README.md  feedback_devcontainer_opdracht.md
.devcontainer/: Dockerfile  devcontainer.json
Documents/: 1. Requirement Analyse.md  2. Systeem Design.md  3. Architectuur Design.md  4. Module Design.md  4.Module Design.md  9. Acceptatie Testen.md  Ontwikkeldocument.md
Documents/Colleges/: Assignment_start_with_the_real_one.md  Notities Lambda & STL.md
Documents/Deep Dive/: SDFormat.md
Documents/Leerdoelen/: Verantwoordingsdocument P1.md  Verantwoordingsdocument.md
Documents/Leerdoelen/LD-1 Analyseren/: LD-1.md
Documents/Leerdoelen/LD-2 Ontwerpen/: LD-2.md
Documents/Leerdoelen/LD-3 Adviseren/: LD-3.md
Documents/Leerdoelen/LD-4 Realiseren/: LD-4.md
Documents/Leerdoelen/LD-5 Beheren/: LD-5.md
Documents/Notities/: Bronnen.md  Product Owner Interview.md  Requirements.md  Voorbereiding loopbaankeuzes.md
Documents/Standups/: 10-03.md  11-03.md
src/: CMakeCache.txt  CMakeLists.txt  Logger.cc  Logger.hh  Makefile  app  cmake_install.cmake  compile_commands.json  main.cc  publisher.cc  robot_forfoxsakes.sdf  subscriber.cc
src/model/: simple_sub.sdf  submarine.sdf
src/model/ground/: ground.sdf  model.config
src/model/meshes/component1_1/: body1_visual.mtl
src/model/water/: model.config  water.sdf
src/opdrachten/alds/: ALDS.ipynb  ALDS_2.ipynb
src/opdrachten/cpp1/: CMakeLists.txt  Makefile  cpp1
src/opdrachten/test/: CMakeLists.txt  Makefile  cmake_install.cmake  output.sdf  test.cc  test_executable
src/opdrachten/vision/: final_assignment.py
(+7 files in other folders)
